--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container" id="tela1">
-        <h1>Você quer namorar comigo?</h1>
+        <h1>Eu te amo ?</h1>
 
         <div class="buttons">
             <div id="seta2" class="seta hidden">⮕</div>
